[package]
name = "benches-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
embedded-hal = "0.2.7"
fugit = "0.3"
rp-pico = "0.7.0"
rp2040-monotonic = "1.3"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
panic-usb-boot = "0.1.0"
nanofft = { path = ".." }
