[package]
name = "benches-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
embedded-hal = "0.2.7"
fugit = "0.3.7"
nanofft = { path = ".." }
panic-usb-boot = "0.2.0"
rp-pico = "0.8.0"
rp2040-monotonic = "1.3.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
